--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_BACKEND_URL = 'http://localhost:4000'
+VITE_BACKEND_URL = 'https://medai-backend-u8nm.onrender.com'
 VITE_RAZORPAY_KEY_ID = '------ Razorpay Key Id here ------'
